# iNTUition

./: .gitignore  .gitmessage  GEMINI.md  PERFORMANCE_PLAN.md  README.md  TODO.md  handbook.md  main.py  package-lock.json  pyproject.toml
backend/: .env.template  README.md  aura_identity.db  benchmark.py  check_agent_init.py  check_gemini_model.py  pyproject.toml  verify_backend.py  verify_runtime.py
backend/app/: main.py  schemas.py
backend/app/agent/agents/: __init__.py  consolidated.py  decision.py  evaluator.py  health.py  judge.py  phased.py  profile.py  understanding.py  vision.py
backend/app/agent/core/: agent.py  bionic_helper.py  dependencies.py  heuristics.py  runtime.py  state.py
backend/app/agent/models/: __init__.py  adaptation.py  consolidated.py  risks.py  skeleton.py  state.py  understanding.py
backend/app/agent/tools/: base.py  distiller_tool.py  explainer_tool.py  tts_tool.py  ui_actions.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accessibility.py  identity.py  system.py
backend/app/core/: cache.py  config.py  distiller.py  errors.py  explainer.py  factory.py  identity.py  logging.py  providers.py  tts.py
backend/tests/: conftest.py  test_agent.py  test_agent_extra.py  test_api.py  test_api_accessibility.py  test_api_identity.py  test_api_vision.py  test_bionic_helper.py  test_cache.py  test_dependencies.py  test_distiller.py  test_distiller_extra.py  test_explainer.py  test_factory.py  test_heuristics.py  test_identity.py  test_providers.py  test_runtime_extra.py  test_runtime_resilience.py  test_state.py  test_tools_extra.py  test_tts.py  test_ui_tools.py  test_vision_judge.py
docs/: AGENTIC_ARCHITECTURE.md  CONTRIBUTING.md  GEMINI.md  OFFSCREEN_CAPTURE_PLAN.md  PERFORMANCE_PLAN.md  ROADMAP.md  TODO.md  agentic_framework.md  idea.md  performance_best_practices.md
extension/: .env.template  README.md  offscreen.html  package-lock.json  package.json  setup.html  tailwind.config.js  tsconfig.app.json  vite.config.ts  vite.content.config.ts
extension/coverage/: clover.xml  coverage-final.json  index.html
extension/coverage/extension/: index.html  vite.content.config.ts.html
extension/coverage/extension/src/: App.tsx.html  background.ts.html  index.html  main.tsx.html  offscreen.ts.html  setup.ts.html
extension/coverage/extension/src/components/: AuraCardDisplay.tsx.html  FloatingWindow.tsx.html  index.html
extension/coverage/extension/src/content/: FloatingApp.tsx.html  ShadowRoot.tsx.html  ThemeManager.ts.html  index.html  index.tsx.html
extension/coverage/extension/src/services/: ToolRouter.ts.html  index.html  speechRecognition.ts.html
extension/public/: manifest.json
extension/src/: App.css  App.extra.test.tsx  App.test.tsx  App.tsx  background.test.ts  background.ts  index.css  offscreen.test.ts  offscreen.ts  setup.ts
extension/src/components/: AuraCardDisplay.test.tsx  AuraCardDisplay.tsx  FloatingWindow.extra.test.tsx  FloatingWindow.test.tsx  FloatingWindow.tsx
extension/src/content/: FloatingApp.test.tsx  FloatingApp.tsx  ShadowRoot.test.tsx  ShadowRoot.tsx  ThemeManager.test.ts  ThemeManager.ts  index.extra.test.ts  index.test.ts  index.ts  index.tsx
extension/src/services/: ToolRouter.test.ts  ToolRouter.ts  speechRecognition.test.ts  speechRecognition.ts
extension/src/test/: setup.ts
frontend/: README.md
